tests/test_variable_state/bad/double_same_state.catala_en
## Test

```catala
declaration scope A:
  output foo content integer
    state bar
    state bar

scope A:
  definition foo state bar equals 2
```

```catala-test-inline
$ catala Typecheck
[ERROR]
There are two states with the same name for the same variable: this is ambiguous. Please change the name of either states.

First instance of state "bar":
┌─⯈ double_same_state.catala_en:6.11-6.14:
└─┐
6 │     state bar
  │           ‾‾‾
  └─ Test

Second instance of state "bar":
┌─⯈ double_same_state.catala_en:7.11-7.14:
└─┐
7 │     state bar
  │           ‾‾‾
  └─ Test
#return code 123#
```
